Fixed distorted bch warning icon when used with Brave browser.

--- a/chrome-wallet/styles/main.css
+++ b/chrome-wallet/styles/main.css
@@ -13864,8 +13864,8 @@ a:hover {
 }
 
 .bch-fork-container .bch-warning {
-  width: 33px;
-  height: 33px;
+  width: auto;
+  height: auto;
   margin-right: 20px;
   align-self: center
 }
